# functional-programming

./: README.md
database_access/: .gitignore  lab1.cabal
database_access/db/: create_tables.sql  db.sql  init_tables.sql
database_access/src/: Create.hs  CreateTest.hs  Delete.hs  DeleteTest.hs  FindById.hs  FindByIdTest.hs  ListAll.hs  Main.hs  Spec.hs  Update.hs  UpdateTest.hs  Utils.hs
integral/: .gitignore  my-project.cabal  package.yaml  stack.yaml
integral/app/: Main.hs
integral/src/: Lib.hs
integral/test/: Spec.hs
