name:              lab1
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.2

executable lab1
  main-is:         Main.hs
  hs-source-dirs:  src
  exposed-modules: Create
  build-depends:   base,
                   mysql-haskell,
                   text,
                   text-conversions,
                   io-streams

test-suite lab1-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      src
  build-depends:
      base,
      mysql-haskell,
      text,
      text-conversions,
      io-streams,
      tasty,
      tasty-hunit,
      tasty-quickcheck,
      tasty-smallcheck
  default-language: Haskell2010
